--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,10 @@
 
 			<script src="core/flatten.js"></script>
 			<script src="core/login.js"></script>
-			
+			<script src="core/create.js"></script>
+			<script src="core/kanban.js"></script>
+			<script src="bower_components/angular-dragdrop/src/angular-dragdrop.min.js"></script>
+
 
 	</body>
 </html>
